<resources>
    <string name="app_name">Doer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_joined">Date Joined</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="birthday">Birthday</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="admin">Admin</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">*Don\'t have an account ? "\n" Create One</string>
    <string name="start_date">Start Date</string>
    <string name="not_specified">Not Specificed</string>
    <string name="select_platform">Select Platform</string>
    <string name="awesome_group_name">Awesome Group Name</string>
    <string name="create">Create</string>
    <string name="your_batch">Your Batch</string>
    <string name="readmore">ReadMore…</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="fcm_token">FCM_TOKEN</string>
    <string name="data_loaded">Data Refreshed</string>
    <string name="create_group">Create Group</string>
    <string name="group_list">Group List</string>
    <string name="assign_task">Assign Task</string>
    <string name="task_title">Task Title</string>
    <string name="todo_description">Todo Description</string>
    <string name="upload_task">Upload Task</string>
    <string name="deadline">Deadline</string>
    <string name="task_list">Task List</string>
    <string name="review">Review</string>
    <string name="marks">Marks</string>
    <string name="performance_note">Performance Note</string>
    <string name="submit_review">Submit Review</string>
    <string name="review_developers">Review Developers</string>
    <string name="event_title">Event Title</string>
    <string name="event">Event</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="upload_event">Upload Event</string>
    <string name="extra_info_opt">Extra Info (opt)</string>
    <string name="task">Task</string>
    <string name="groups">Groups</string>
    <string name="time">Time</string>
    <string name="all_events">All Events</string>
    <string name="admin_landing">Admin  Landing</string>
    <string name="all_groups">All Groups</string>
    <string name="all_task">All Task</string>
    <string name="all_developers">All Developers</string>
    <string name="dashbaord">Dashboard</string>
    <string name="task_review">Task Review</string>
    <string name="reviewed_task">Reviewed Task</string>
</resources>
