<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="Create Group "
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="serif" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_group_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/start_date"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:typeface="serif" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_platform_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:prompt="@string/select_platform"
        android:spinnerMode="dialog"
        android:text="@string/not_specified"
        android:textSize="16sp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_group_black_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/awesome_group_name"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:typeface="serif" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="serif" />

</LinearLayout>