<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="54dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:typeface="serif" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_user_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/birthday"
                    android:maxLines="1"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_user_date_joined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date_joined"
                    android:maxLines="1"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>


        <!--<RadioGroup-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:gravity="center"-->
        <!--android:id="@+id/rb_gender"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<RadioButton-->
        <!--android:id="@+id/rb_female"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/female"-->
        <!--android:textSize="16sp" />-->

        <!--<RadioButton-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:id="@+id/rb_male"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/male"-->
        <!--android:textSize="16sp" />-->

        <!--<RadioButton-->
        <!--android:id="@+id/rb_not_specified"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/other"-->
        <!--android:textSize="16sp" />-->

        <!--</RadioGroup>-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textWebEmailAddress"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_user_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/confirm_password"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_user_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:typeface="serif" />

    </LinearLayout>

</ScrollView>