<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="54dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:typeface="serif" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_crete_ac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/tv_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:typeface="serif" />

    </LinearLayout>


</ScrollView>