<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_review_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/review"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:typeface="serif" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_brightness_1_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/task_title"
                android:inputType="textMultiLine"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_review_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_brightness_1_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/marks"
                android:inputType="number"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_user_review"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:gravity="top"
                android:hint="@string/review"
                android:inputType="textMultiLine"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_review_performance_note"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:gravity="top"
                android:hint="@string/performance_note"
                android:inputType="textMultiLine"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:typeface="serif" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_upload_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/submit_review"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:typeface="serif" />


    </LinearLayout>


</ScrollView>